--- a/SilentAuction/appsettings.json
+++ b/SilentAuction/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "ConnectionStrings": { "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SilentAuction;Trusted_Connection=True;MultipleActiveResultSets=true" },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
